--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vercel-build": "prisma generate && next build"
   },
   "dependencies": {
+    "@blackbox-vision/react-qr-reader": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
     "jszip": "^3.10.1",
