--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "vercel-build": "prisma generate && next build"
   },
   "dependencies": {
-    "@blackbox-vision/react-qr-reader": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
+    "html5-qrcode": "^2.3.8",
     "jszip": "^3.10.1",
     "multer": "^2.0.1",
     "next": "15.4.1",
