--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && next build"
+    "vercel-build": "prisma generate && prisma db push && next build",
+    "db-push": "prisma db push"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
