--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pdf-lib": "^1.17.1",
     "prisma": "^6.12.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "^0.34.3"
