--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
+    "canvas": "^3.1.2",
     "html5-qrcode": "^2.3.8",
     "jszip": "^3.10.1",
     "multer": "^2.0.1",
