--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
+    "@types/nodemailer": "^6.4.17",
     "canvas": "^3.1.2",
     "html5-qrcode": "^2.3.8",
     "jszip": "^3.10.1",
     "multer": "^2.0.1",
     "next": "15.4.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "pdf-lib": "^1.17.1",
     "prisma": "^6.12.0",
     "qrcode": "^1.5.4",
