--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.0.1",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
