--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.12.0",
     "@types/nodemailer": "^6.4.17",
     "canvas": "^3.1.2",
+    "dotenv": "^17.2.1",
     "html5-qrcode": "^2.3.8",
     "jszip": "^3.10.1",
     "multer": "^2.0.1",
