--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
     "@types/nodemailer": "^6.4.17",
+    "@walletpass/pass-js": "^6.9.1",
     "canvas": "^3.1.2",
     "dotenv": "^17.2.1",
     "html5-qrcode": "^2.3.8",
@@ -23,6 +24,7 @@
     "next": "15.4.1",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "passkit-generator": "^3.4.0",
     "pdf-lib": "^1.17.1",
     "prisma": "^6.12.0",
     "qrcode": "^1.5.4",
